--- a/index.html
+++ b/index.html
@@ -19,14 +19,14 @@
 
 <body>
     <h4>Coordenadas</h4>
-    <button onclick="geolocate()">Obtener coordenadas</button>
+    <button onclick="getLocation()">Obtener coordenadas</button>
     <h5 id="coordenadas"></h5>
 
-    <div id="map"></div>
+    <!-- <div id="map"></div> -->
 
-    <script async defer
+    <!-- <script async defer
         src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCG6l-L5kXIgAUHXBpVcQ_292NjHWa1ke0&callback=initMap">
-    </script>
+    </script> -->
     <script src="custom.js"></script>
 </body>
 
