--- a/index.html
+++ b/index.html
@@ -8,10 +8,44 @@
     <title>PWA Básica - GPS</title>
 
     <style>
+        * {
+            box-sizing: border-box;
+        }
+
+        body {
+            margin: 0;
+            padding: 10px;
+            border-style: borde
+        }
+
         #map {
             width: 100%;
             height: 400px;
             background-color: grey;
+        }
+
+        .consola {
+            position: relative;
+            display: block;
+            width: 100%;
+            height: auto;
+            min-height: 150px;
+            background-color: black;
+            border: 1px solid grey;
+            color: rgb(38, 248, 38);
+            margin-top: 20px;
+            padding: 10px;
+        }
+
+        .consola span {
+            position: relative;
+            display: block;
+        }
+
+        button {
+            padding: 10px;
+            background-color: rgb(41, 78, 199);
+            color: white;
         }
     </style>
 
@@ -19,15 +53,20 @@
 
 <body>
     <h4>Coordenadas</h4>
-    <button onclick="getLocation()">Obtener coordenadas</button>
-    <h5 id="coordenadas"></h5>
+    <button onclick="obtenerCoords()">Obtener coordenadas</button>
+
+    <span class="consola"></span>
+
+    <h5 id="startLat"></h5>
+    <h5 id="startLon"></h5>
 
     <!-- <div id="map"></div> -->
 
     <!-- <script async defer
         src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCG6l-L5kXIgAUHXBpVcQ_292NjHWa1ke0&callback=initMap">
     </script> -->
-    <script src="custom.js"></script>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
+    <script src="scripts.js"></script>
 </body>
 
 </html>
