--- a/index.html
+++ b/index.html
@@ -60,11 +60,11 @@
     <h5 id="startLat"></h5>
     <h5 id="startLon"></h5>
 
-    <!-- <div id="map"></div> -->
+    <div id="map"></div>
 
-    <!-- <script async defer
+    <script async defer
         src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCG6l-L5kXIgAUHXBpVcQ_292NjHWa1ke0&callback=initMap">
-    </script> -->
+    </script>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
     <script src="scripts.js"></script>
 </body>
