add clear console

--- a/index.html
+++ b/index.html
@@ -54,6 +54,7 @@
 <body>
     <h4>Coordenadas</h4>
     <button onclick="obtenerCoords()">Obtener coordenadas</button>
+    <button onclick="clearConsole()">Clear console</button>
 
     <span class="consola"></span>
 
